--- a/Dockerfile.nodejs-rally
+++ b/Dockerfile.nodejs-rally
@@ -1,5 +1,6 @@
 FROM registry.cn-shenzhen.aliyuncs.com/jaydomchen/openstack:master
-RUN wget https://nodejs.org/dist/v8.11.4/node-v8.11.4-linux-x64.tar.xz \
+RUN apt-get install -y wget \
+    && wget https://nodejs.org/dist/v8.11.4/node-v8.11.4-linux-x64.tar.xz \
     && tar -xJf node-v8.11.4-linux-x64.tar.xz -C /usr/local \
     && rm -f node-v8.11.4-linux-x64.tar.xz \
     && ln -s /usr/local/bin/node /usr/local/bin/nodejs
