--- a/Dockerfile.nodejs-rally
+++ b/Dockerfile.nodejs-rally
@@ -1,4 +1,5 @@
 FROM registry.cn-shenzhen.aliyuncs.com/jaydomchen/openstack:master
+USER root
 RUN apt-get install -y wget \
     && wget https://nodejs.org/dist/v8.11.4/node-v8.11.4-linux-x64.tar.xz \
     && tar -xJf node-v8.11.4-linux-x64.tar.xz -C /usr/local \
