--- a/Dockerfile.java-rally
+++ b/Dockerfile.java-rally
@@ -1,6 +1,6 @@
 FROM registry.cn-shenzhen.aliyuncs.com/jaydomchen/openstack:master
 USER root
 
-apt-get install -y openjdk-8-jdk-headless
+RUN apt-get install -y openjdk-8-jdk-headless
   
 CMD [ "java" ]
